--- a/public/index.html
+++ b/public/index.html
@@ -278,7 +278,7 @@ name: {
                         </td>
                         <td>Add a new toy to the data base, <strong>You need a token for this query ,</strong><br>
                             <a class="text-decoration-none"
-                            href="https://github.com/suryG/node-toy-project.git/blob/main/api/validation/toyValidation.js">if
+                            href="https://github.com/suryG/node-toy-project/blob/master/models/toyModel.js">if
                             you want to see the template of valid toy</a>
                         </td>
                     </tr>
