--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@ name: {
                 <tbody>
                     <tr>
                         <td>GET</td>
-                        <td><a href="https://node-toy-project.onrender.com/toys">/toys</a></td>
+                        <td><a href="https://node-toy-project.onrender.com/toys/">/toys</a></td>
                         <td class="text-center">none</td>
                         <td>Get a list of all the toys, will present 10 results per page.</td>
                     </tr>
